# hcie-system

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  HOW_IT_WORKS.md  LICENSE  MANUAL.md  Makefile  README.md  REPRODUCIBILITY.md  SONAR_EVIDENCE_SCAN.md  sonar-project.properties
HCIE_SYSTEM_BACKEND_FINAL/: pyproject.toml  pytest.ini  requirements-compliance.txt
HCIE_SYSTEM_BACKEND_FINAL/00_documentation/09_adr/: ARCHITECTURE_DECISIONS.md
HCIE_SYSTEM_BACKEND_FINAL/01_source/00_core/: __init__.py
HCIE_SYSTEM_BACKEND_FINAL/01_source/01_application/: debug_test.json  main.py  missing_routes.txt  openapi.json  research_logs.json  run_phase0_tests.sh  simple_feedback.json  test_feedback.ps1
HCIE_SYSTEM_BACKEND_FINAL/02_tests/: conftest.py  verify_closed_loop.py
HCIE_SYSTEM_BACKEND_FINAL/02_tests/00_test_utilities/: fakes.py  finals_loader.py
HCIE_SYSTEM_BACKEND_FINAL/02_tests/00_unit/: test_config_import_migration.py  test_retirement_readiness.py
HCIE_SYSTEM_BACKEND_FINAL/02_tests/02_behavioral/: concurrent_mutation_validation.py  lifecycle_timing_validation.py  multi_worker_validation.py  ownership_violation_validation.py  reconstruction_race_validation.py  replay_equivalence_validation.py
HCIE_SYSTEM_BACKEND_FINAL/02_tests/03_research/: test_p0_1_brutal_truth.py  test_p0_2_cognitive_parity.py  test_p1_trace_continuity.py  test_p2_projection_correctness.py  test_p3_replay_determinism.py  test_p4_dlq_recovery.py  test_validation_phase3_p0.py
HCIE_SYSTEM_BACKEND_FINAL/02_tests/05_performance/: api-load-test.js  smoke-test.js
HCIE_SYSTEM_BACKEND_FINAL/02_tests/06_security/: test_audit_schema_conformance.py
HCIE_SYSTEM_BACKEND_FINAL/02_tests/golden/: unified_brain_golden.json
HCIE_SYSTEM_BACKEND_FINAL/03_scripts/01_maintenance/: reseal.py
HCIE_SYSTEM_BACKEND_FINAL/03_scripts/01_ops/: init_cutover_database.py  seed_admin.py
HCIE_SYSTEM_BACKEND_FINAL/03_scripts/02_analysis/: audit_worker_pipeline.py  dep_graph_analysis.py
HCIE_SYSTEM_BACKEND_FINAL/04_config/00_schemas/: settings.py
HCIE_SYSTEM_BACKEND_FINAL/06_monitoring/: MIGRATION.md
HCIE_SYSTEM_BACKEND_FINAL/08_security/: setup_compliance.bat  setup_compliance.sh
HCIE_SYSTEM_BACKEND_FINAL/config/: endpoint_authority_manifest.yaml
(+1035 files in other folders)
